2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.MacDev:
	* MonoDevelop.IPhone.sln: Moved sharable code, icons,
	  templates and mimetype definitions out of the iPhone addin
	  into a new MacDev addin.

2010-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump MD version.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bumped MD version.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.sln:
	* MonoDevelop.Debugger.Soft.IPhone: Move the IPhone soft
	  debugger addin to the IPhone sln.

2009-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile: make the "clean" target work without mdtool.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump MD version.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump MD version.

2009-09-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.sln: Set a changelog integration policy.

2009-07-29  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile: Rebuild addin registry before using mdtool.

2009-07-22  Michael Hutchinson  <mhutchinson@novell.com>

	* md-build-integration.diff: Add a diff for patching into the
	  MD build.

2009-06-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.sln: Updated.

2009-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* configure, Makefile:
	  Add makefiles so can be integrated to MD build.
	
	* README: Add some notes about building the addin.
