@@ -2,28 +2,22 @@ include config.make
 installdir = "$(prefix)/lib/monodevelop/AddIns/MonoDevelop.IPhone"
 conf=Debug
 SLN=MonoDevelop.IPhone.sln
+VERBOSITY=quiet
+XBUILD_ARGS=/verbosity:$(VERBOSITY) /nologo
 
 ISLOCAL := $(wildcard "../local-config/monodevelop.pc")
 ifeq ($(strip $(ISLOCAL)),)
-	LOCAL_MDBUILD=../../main/build
-	MDTOOL=\
-		PKG_CONFIG_PATH="../../local-config:${PKG_CONFIG_PATH}" \
-		MONODEVELOP_LOCALE_PATH="${LOCAL_MDBUILD}/locale" \
-		MONO_ADDINS_REGISTRY="${LOCAL_MDBUILD}/bin" \
-		mono --debug "${LOCAL_MDBUILD}/bin/mdrun.exe"
+	LOCAL_CONFIG="`pwd`/../../local-config"
+	XBUILD=PKG_CONFIG_PATH="${LOCAL_CONFIG}:${PKG_CONFIG_PATH}" xbuild $(XBUILD_ARGS)
 else
-	MDTOOL=mdtool
+	XBUILD=xbuild $(XBUILD_ARGS)
 endif
 
-all: update-reg
-	$(MDTOOL) build -c:$(conf) $(SLN)
+all: 
+	$(XBUILD) $(SLN) /property:Configuration=$(conf)
 
 clean:
 	rm -rf build/*
-
-# this breaks if the local MD has been cleaned
-#clean: update-reg	
-#	$(MDTOOL) build -t:Clean -c:$(conf) $(SLN)
 
 install: all
 	mkdir -p  $(installdir)
@@ -31,10 +25,3 @@ install: all
 
 uninstall:
 	rm -rf "$(installdir)"
-
-ifeq ($(strip $(ISLOCAL)),)
-update-reg:
-	$(MDTOOL) setup reg-update
-else
-	update-reg:
-endif
