@@ -1,3 +1,7 @@
+2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Makefile: Use xbuild instead of mdtool.
+
 2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.MacDev:
